[ICU-6951] Merging generics support changes from the work branch. X-Commit-URL: https://ssl.icu-project.org/trac/changeset/26059 Former-commit-id: 9d9172ce9eedada415701deb45f8be1c199e6641